<resources>
    <string name="app_name">BookClub</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="failed_login">Invalid username or password</string>
    <string name="register_success">Please confirm email</string>
    <string name="current_page">current page: </string>
    <string name="notes">notes +</string>
    <string name="enter_page">enter page</string>
    <string name="list_is_empty">Your reading list is empty!</string>
    <string name="add_to_reading_list">Add to Reading List</string>
    <string name="search_for_books">Search for books</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="clubs">Clubs</string>
    <string name="clear_search">Clear search item</string>
    <string name="plus_reading_list">+ Reading List</string>
    <string name="success_add_to_reading_list">Book added to reading list!</string>
    <string name="failed_add_to_reading_list">Failed to add book</string>
    <string name="create_club">Create Club</string>
    <string name="search_new_book">search new book</string>
    <string name="image_of_book">image of book</string>
    <string name="book_name">Book Name:</string>
    <string name="club_name">Club Name</string>
    <string name="selected_book">Selected Book</string>
    <string name="club_topics">Topics</string>
    <string name="add_topic">Topic</string>
</resources>