<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="book"
            type="com.example.bookclub.models.DatabaseBook" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CreateClubFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/selected_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/selected_book"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:enabled="false"
            android:layout_margin="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/selected_book_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@{book.bookTitle}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/club_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/club_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/selected_book"
            android:layout_margin="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/club_name_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_club"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/create_club"
            app:layout_constraintTop_toBottomOf="@id/club_name"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>